--- a/samurai-way/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/samurai-way/src/components/Profile/MyPosts/MyPosts.module.css
@@ -1,4 +1,7 @@
-.content {
-  grid-area: c;
-  background-color: rgb(230, 227, 248);
+.posts {
+  padding: 10px;
+}
+
+.postsOverlay {
+  padding: 10px;
 }
