REFACTOR-&-FEAT: Message add done
Changed code structure from default functions in components to
store and state content control, also did some functionality to
message components

--- a/samurai-way/src/components/Navbar/Navbar.module.css
+++ b/samurai-way/src/components/Navbar/Navbar.module.css
@@ -22,3 +22,32 @@
   border-bottom: 2px solid green;
   border-bottom-style: dashed;
 }
+
+.friendsWrapper {
+  margin-top: 30px;
+  display: grid;
+  grid-template-columns: repeat(1fr, auto);
+  grid-template-rows: 1fr;
+  text-align: center;
+}
+
+.friendsTitle {
+  color: #fff;
+  margin: 0;
+  margin-bottom: 10px;
+}
+
+.friendsItem {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.friendsItem:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.friendsIcon img {
+  width: 30px;
+  border-radius: 50%;
+}
