--- a/samurai-way/src/components/Header/Header.module.css
+++ b/samurai-way/src/components/Header/Header.module.css
@@ -1,6 +1,10 @@
 .header {
   grid-area: h;
   background-color: darkslateblue;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px;
 }
 
 .header img {
