--- a/samurai-way-2/src/App.css
+++ b/samurai-way-2/src/App.css
@@ -1,8 +1,8 @@
-body{
+body {
   margin: 0 !important;
 }
 
-.app-wrapper {
+/* .app-wrapper {
   display: grid;
   grid-template-areas:
     'h h'
@@ -10,9 +10,9 @@ body{
   grid-template-rows: 60px 1fr;
   grid-template-columns: 2fr 10fr;
   /*grid-gap: 10px;*/
-}
+/* }
 
 .app-wrapper-content {
   grid-area: c;
   background-color: rgb(230, 227, 248);
-}
+} */
