--- a/samurai-way-2/src/components/Header/Header.module.css
+++ b/samurai-way-2/src/components/Header/Header.module.css
@@ -1,24 +1,26 @@
 .header {
-    grid-area: h;
-    background-color: darkslateblue;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 20px;
+  grid-area: h;
+  background-color: rgb(15, 5, 73);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px;
+  height: 70px;
+  color: #fff;
 }
 
 .header img {
-    width: 50px;
+  width: 50px;
 }
 
 .loginLink {
-    text-decoration: none;
-    color: #fff;
-    font-size: 20px;
-    font-weight: bold;
-    transition: all .5s;
+  text-decoration: none;
+  color: #fff;
+  font-size: 20px;
+  font-weight: bold;
+  transition: all 0.5s;
 }
 
 .loginLink:hover {
-    opacity: 0.7;
+  opacity: 0.7;
 }
