--- a/react-fundamentals/src/assets/styles/App.css
+++ b/react-fundamentals/src/assets/styles/App.css
@@ -21,3 +21,25 @@
   justify-content: space-between;
   align-items: center;
 }
+
+.page__wrapper {
+  margin: 15px 0;
+  display: flex;
+}
+
+.page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border: 1px solid black;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-right: 10px;
+}
+
+.page__current {
+  background-color: #000;
+  color: #fff;
+}
