--- a/react-fundamentals/src/components/UI/Loader/Loader.module.css
+++ b/react-fundamentals/src/components/UI/Loader/Loader.module.css
@@ -1,9 +1,17 @@
+.loaderWrapper {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
 .loader {
   width: 100px;
   height: 100px;
   border-radius: 50%;
-  border: 3px dotted black;
-  animation: rotate 2s infinite linear;
+  border: 3px dashed black;
+  animation: rotate 4s infinite linear;
 }
 
 @keyframes rotate {
