--- a/react-fundamentals/src/assets/styles/App.css
+++ b/react-fundamentals/src/assets/styles/App.css
@@ -6,40 +6,10 @@
 
 #root {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .App {
   width: 800px;
-}
-
-.post {
-  display: flex;
-  padding: 15px;
-  border: 2px solid black;
-  margin-top: 15px;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.page__wrapper {
-  margin: 15px 0;
-  display: flex;
-}
-
-.page {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 40px;
-  height: 40px;
-  border: 1px solid black;
-  border-radius: 5px;
-  cursor: pointer;
-  margin-right: 10px;
-}
-
-.page__current {
-  background-color: #000;
-  color: #fff;
 }
