GOODS-[FEAT]: Carcas ready, styles left

--- a/goods-shop/src/index.scss
+++ b/goods-shop/src/index.scss
@@ -1,3 +1,9 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import './assets/styles/app.scss';
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
