GOODS-[FEAT]: Basic styles done

--- a/goods-shop/src/assets/styles/_variables.scss
+++ b/goods-shop/src/assets/styles/_variables.scss
@@ -1,8 +1,10 @@
 $black: #232323;
-$background: #ffdf8c;
+$background: #defdc1;
 $gray-line: #f6f6f6;
-$orange: #fe5f1e;
-
+$green: #1d9b47;
+$bg-green: rgba(128, 255, 55, 0.05);
 $container-width: 90%;
-
 $duration: 0.15s;
+
+$bg-darker: #cfcfcf;
+$basic-light: #ebebeb;
