--- a/goods-shop/src/assets/styles/components/_sort.scss
+++ b/goods-shop/src/assets/styles/components/_sort.scss
@@ -15,8 +15,8 @@
     }
 
     span {
-      color: $orange;
-      border-bottom: 1px dashed $orange;
+      color: $green;
+      border-bottom: 1px dashed $green;
       cursor: pointer;
     }
   }
@@ -40,12 +40,12 @@
 
         &.active,
         &:hover {
-          background: rgba(254, 95, 30, 0.05);
+          background: $bg-green;
         }
 
         &.active {
           font-weight: bold;
-          color: $orange;
+          color: $green;
         }
       }
     }
