--- a/goods-shop/src/assets/styles/app.scss
+++ b/goods-shop/src/assets/styles/app.scss
@@ -18,16 +18,6 @@ body {
 
 .content {
   padding: 40px 0;
-
-  &__title {
-    margin: 35px 0;
-  }
-
-  &__items {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
   &__top {
     display: flex;
     align-items: center;
@@ -219,7 +209,7 @@ body {
 
         &:last-of-type {
           b {
-            color: $orange;
+            color: $green;
           }
         }
       }
