--- a/goods-shop/src/assets/styles/components/_categories.scss
+++ b/goods-shop/src/assets/styles/components/_categories.scss
@@ -5,7 +5,7 @@
     display: flex;
 
     li {
-      background-color: #f9f9f9;
+      background-color: $basic-light;
       padding: 13px 30px;
       border-radius: 30px;
       margin-right: 10px;
@@ -15,11 +15,11 @@
       @include noselect();
 
       &:hover {
-        background-color: darken(#f9f9f9, 2%);
+        background-color: darken($bg-darker, 2%);
       }
 
       &:active {
-        background-color: darken(#f9f9f9, 5%);
+        background-color: darken($bg-darker, 5%);
       }
 
       &.active {
