--- a/goods-shop/src/assets/styles/components/_sort.scss
+++ b/goods-shop/src/assets/styles/components/_sort.scss
@@ -1,10 +1,13 @@
 @import './../variables';
 
 .sort {
+  width: 300px;
   position: relative;
+
   &__label {
     display: flex;
     align-items: center;
+    justify-content: end;
 
     svg {
       margin-right: 8px;
