--- a/goods-shop/src/components/Header/Header.module.scss
+++ b/goods-shop/src/components/Header/Header.module.scss
@@ -2,6 +2,7 @@
   position: relative;
 
   .search__svg {
+    cursor: pointer;
     position: absolute;
     width: 24px;
     height: 24px;
@@ -10,6 +11,7 @@
   }
 
   .close__svg {
+    cursor: pointer;
     position: absolute;
     width: 24px;
     height: 24px;
