--- a/goods-shop/src/components/MainItems/Items.module.scss
+++ b/goods-shop/src/components/MainItems/Items.module.scss
@@ -8,6 +8,8 @@
 .noDataWrapper {
   display: flex;
   justify-content: center;
+  width: 100%;
+  margin: 20px 0;
 
   .noData {
     display: flex;
