GOODS-[REFACTOR]: API changed

--- a/goods-shop/src/assets/styles/app.scss
+++ b/goods-shop/src/assets/styles/app.scss
@@ -157,6 +157,22 @@ body {
       width: 30%;
 
       &-minus {
+        &:disabled {
+          opacity: 0.4;
+          border-color: #787878;
+
+          &:active {
+            transform: none;
+          }
+
+          &:hover {
+            background-color: transparent;
+          }
+          svg path {
+            fill: #787878;
+          }
+        }
+
         svg {
           path:first-of-type {
             display: none;
